examples/negative/silent_contract/duplicate_type_decl.kai
# Silent contract (#511 audit): declaring the same type name
# twice in one module should be rejected. Stage 2 silently
# accepts; downstream resolution picks one of the two definitions
# nondeterministically and the user gets confusing match errors.

type Foo = A | B
type Foo = C | D

fn main() : Int = 0
